<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8eaf6">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_submit_food_food_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/food_name"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/indigo_dark"
        app:boxStrokeColor="?colorPrimary"
        app:cornerRadius="5dp"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/fragment_submit_food_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_submit_food_food_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_submit_food_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:backgroundTint="@color/indigo_dark"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_submit_food_food_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_submit_food_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>