<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo_light">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/logo_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_main_add_to_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/white"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/add_food"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_main_available_food_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_main_available_food_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/white"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/available_food"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_main_online_posts_button"
        app:layout_constraintTop_toBottomOf="@id/fragment_main_add_to_list_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_main_online_posts_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/white"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/online_posts"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_main_available_food_button" />

</androidx.constraintlayout.widget.ConstraintLayout>